# erdos-straus-solver

./: .gitattributes  .gitignore  LICENSE  README.md  auto_rescue.py  cloud_coordinator.py  download_sieve_data.py  erdos_dashboard.html  erdos_straus.py  erdos_straus_colab.ipynb  erdos_straus_gpu.py  erdos_straus_kaggle.ipynb  erdos_straus_lightning.py  erdos_straus_sagemaker.ipynb  erdos_straus_sieve.py  erdos_straus_sieve_colab.ipynb  erdos_straus_sieve_kaggle.ipynb  erdos_straus_sieve_lightning.py  erdos_straus_sieve_sagemaker.ipynb  gpu_micro_rescue.py  gpu_rescue_file.py  gpu_rescue_lean.py  gpu_tiered_rescue.py  hunter_200k_checkpoint.csv  hunter_20M_checkpoint.csv  hunter_checkpoint.csv  hunter_test_1000.csv  leviathan_1M_checkpoint.csv  leviathan_200k_checkpoint.csv  leviathan_20M_checkpoint.csv  leviathan_20m_checkpoint.csv  leviathan_checkpoint.csv  leviathans_cracked.csv  leviathans_unsolved.csv  phone_gpu_solver.c  phone_solver.py  phone_sync.sh  pyproject.toml  run_cpu3.py  termux_auto_setup.sh
.claude/: settings.json
archive/: colab_rescue.py  cpu_rescue.py  final_rescue.py  gpu_rescue.py  run_cpu4.py  run_cpu5.py  survivor_profile.py  termux_setup.sh
kaggle_deploy/: erdos_straus_sieve_kaggle.ipynb  kernel-metadata.json
kaggle_deploy2/: erdos_straus_sieve_kaggle.ipynb  kernel-metadata.json
kaggle_deploy3/: erdos_straus_sieve_kaggle.ipynb  kernel-metadata.json
kaggle_results/: sieve_results_1546_2318.csv  sieve_results_2319_3091.csv  sieve_results_3092_3478.csv  sieve_results_3479_3864.csv  sieve_results_967_1545.csv
phone/: PHONE_SETUP.md  (+3 more)
(+6 files in other folders)
